Improve face check dialogs and async histogram loading
Set FaceCheck1 and faceCheck dialogs to be undecorated and adjust their sizes. Add timers to auto-close these dialogs after a set duration. In login.java, load reference histograms asynchronously in a new thread and show FaceCheck1 dialog after successful face detection instead of Dashboard. Also, add a mouseEntered event handler for jLabel8.

--- a/src/studentmanager/login.form
+++ b/src/studentmanager/login.form
@@ -203,6 +203,7 @@
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel8MouseClicked"/>
+            <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel8MouseEntered"/>
           </Events>
         </Component>
       </SubComponents>
