--- a/src/studentmanager/Dashboard.form
+++ b/src/studentmanager/Dashboard.form
@@ -61,6 +61,7 @@
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
                               <Component id="jPanel7" max="32767" attributes="0"/>
                               <Component id="jPanel8" max="32767" attributes="0"/>
+                              <Component id="jLabel31" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
@@ -99,6 +100,8 @@
                           <Component id="jPanel7" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="jPanel8" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                          <Component id="jLabel31" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
@@ -462,7 +465,7 @@
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="0"/>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/studentmanager/icons/addSmall.png"/>
+                  <Image iconType="3" name="/studentmanager/icons/add1.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="ADD STUDENT"/>
                 <Property name="opaque" type="boolean" value="true"/>
@@ -484,7 +487,7 @@
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="0"/>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/studentmanager/icons/removeSmall.png"/>
+                  <Image iconType="3" name="/studentmanager/icons/remove1.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="REMOVE STUDENT"/>
                 <Property name="opaque" type="boolean" value="true"/>
@@ -506,7 +509,7 @@
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="0"/>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/studentmanager/icons/removeSmall.png"/>
+                  <Image iconType="3" name="/studentmanager/icons/import1.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="IMPORT CSV/TXT FILE"/>
                 <Property name="opaque" type="boolean" value="true"/>
@@ -822,6 +825,14 @@
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel29MouseClicked"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JLabel" name="jLabel31">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="jLabel31"/>
+          </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel31MouseClicked"/>
           </Events>
         </Component>
       </SubComponents>
